# lxp

./: .gitignore  README.md  lxp.code-workspace
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: define_pool.rs  get_pool.rs  grab_machine.rs  list_pools.rs  mod.rs  status.rs
cli/src/pretty_formats/: mod.rs  pool_definition.rs  status.rs
common/: Cargo.toml
common/src/: lib.rs  lxp_status.rs  machine_handle.rs  machine_identifier.rs  machine_type.rs  pool_definition.rs  pool_identifier.rs
daemon/: Cargo.toml
daemon-connector/: Cargo.toml
daemon-connector/src/: connector.rs  daemon.rs  lib.rs  message.rs  message_begin.rs  message_define_pool.rs  message_grab_machine.rs  message_grab_machine_response.rs  serve_target.rs
daemon/src/: lxd_machine.rs  lxd_machine_status.rs  main.rs  pool_manager.rs  pool_service.rs  store.rs
