[package]
name = "lxp-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
dirs = "6.0.0"
serde = "1.0.219"
serde_yaml = "0.9.34"
uuid = { version = "1.16.0", features = ["v4"] }

[dependencies.lxp-daemon-connector]
path = "../daemon-connector"

[dependencies.lxp-common]
path = "../common"
